@@ -118,6 +118,15 @@ specifier|public
 class|class
 name|DOMUtil
 block|{
+DECL|field|XML_RESERVED_PREFIX
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|XML_RESERVED_PREFIX
+init|=
+literal|"xml"
+decl_stmt|;
 DECL|method|toMap
 specifier|public
 specifier|static
@@ -206,6 +215,22 @@ argument_list|(
 name|j
 argument_list|)
 decl_stmt|;
+comment|// automaticly exclude things in the xml namespace, ie: xml:base
+if|if
+condition|(
+name|XML_RESERVED_PREFIX
+operator|.
+name|equals
+argument_list|(
+name|attr
+operator|.
+name|getPrefix
+argument_list|()
+argument_list|)
+condition|)
+continue|continue
+name|outer
+continue|;
 name|String
 name|attrName
 init|=
